syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

enum NetworkName {
  // Rule: CHAINNAME_ENVIRONMENT_NETWORK

  NO_NETWORK = 0;

  // BTC 1xxx
  BITCOIN_MAINNET_MAINNET = 10000;
  BITCOIN_TESTNET_TESTNET = 10001;
  // DEFAULT
  BITCOIN_DEFAULT_DEFAULT = 19999;

  // EVM 2xxxx
  // Etheruem
  ETHEREUM_MAINNET_MAINNET = 20000;
  ETHEREUM_TESTNET_GOERLI = 20001;
  ETHEREUM_TESTNET_SEPOLIA = 20002;
  // Polygon
  POLYGON_MAINNET_MAINNET = 20003;
  POLYGON_TESTNET_MUMBAI = 20004;
  // BNB Chain
  BNB_MAINNET_MAINNET = 20005;
  BNB_TESTNET_TESTNET = 20006;
  // Avalanche
  AVALANCHE_MAINNET_CCHAIN = 20007;
  AVALANCHE_TESTNET_FUJI = 20008;
  // Gnosis
  GNOSIS_MAINNET_MAINNET = 20009;
  GNOSIS_TESTNET_CHIADO = 20010;
  // Optimism
  OPTIMISM_MAINNET_MAINNET = 20011;
  OPTIMISM_TESTNET_GOERLI = 20012;
  // Arbitrum
  ARBITRUM_MAINNET_MAINNET = 20013;
  ARBITRUM_TESTNET_GOERLI = 20014;
  // Shardeum
  //  SHARDEUM_MAINNET_ = 20015;
  //  SHARDEUM_TESTNET_ = 20016;
  SHARDEUM_BETANET_SPHINX = 20017;
  // Zetachain
  // ZETA_MAINNET_MAINNET = 20018;
  ZETA_TESTNET_ATHENS = 20019;
  // DEFAULT
  EVM_DEFAULT_DEFAULT = 29999;

  // MOVE 3xxxx
  // Aptos
  APTOS_MAINNET_MAINNET = 30000;
  APTOS_TESTNET_TESTNET = 30001;
  // Sui
  SUI_MAINNET_MAINNET = 30002;
  SUI_TESTNET_TESTNET = 30003;
  // DEFAULT
  MOVE_DEFAULT_DEFAULT = 39999;

  // SOLANA 4xxxx
  SOLANA_MAINNET_MAINNET = 40000;
  SOLANA_TESTNET_TESTNET = 40001;
  // DEFAULT
  SOLANA_DEFAULT_DEFAULT = 49999;
}
